--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -37,9 +37,10 @@
 }
 
 .button {
-  border: 2px solid lightgray;
+  margin-top: 10px;
+  background-color: #9757b5;
   padding: 10px;
-  background-color: white;
+  color: white;
   cursor: pointer;
   border-radius: 5px;
   margin: 5px 0;
