--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   --max-width: 1100px;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
@@ -71,7 +71,7 @@
     --card-rgb: 100, 100, 100;
     --card-border-rgb: 200, 200, 200;
   }
-}
+} */
 
 * {
   box-sizing: border-box;
@@ -99,11 +99,11 @@ a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: light) {
+/* @media (prefers-color-scheme: light) {
   html {
     color-scheme: dark;
   }
-}
+} */
 
 
 table {
@@ -120,3 +120,15 @@ td, th {
   display: none;
 }
 
+blockquote {
+  border-left: 4px solid #ccc;
+  margin: 20px 0;
+  padding: 10px 20px;
+  color: #555;
+  background-color: #f9f9f9;
+  font-style: italic;
+}
+
+ul, ol {
+  padding-left: 20px;
+}
